--- a/appdetails.json
+++ b/appdetails.json
@@ -16,6 +16,6 @@
     {"id":6, "app":"com.get.client"}
   ],
   "free":[
-    {"id":0, "file":0, "city":"india","country":"India","image":"Germany","ip":"34.125.110.243","active":"true","signal":"a"}
+    {"id":0, "file":0, "city":"india","country":"India","image":"germany","ip":"34.125.110.243","active":"true","signal":"a"}
   ]
 }
