--- a/appdetails.json
+++ b/appdetails.json
@@ -17,6 +17,6 @@
   ],
   "free":[
     {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"51.68.191.75","active":"true","signal":"a"},
-    {"id":1, "file":0, "city":"Hamburg","country":"Germany","image":"germany","ip":"51.68.191.75","active":"true","signal":"b"},
+    {"id":1, "file":0, "city":"Hamburg","country":"Germany1","image":"germany","ip":"51.68.191.75","active":"true","signal":"b"},
   ]
 }
