--- a/appdetails.json
+++ b/appdetails.json
@@ -16,7 +16,6 @@
     {"id":6, "app":"com.get.client"}
   ],
   "free":[
-    {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"34.125.110.243","active":"true","signal":"a"},
-    {"id":0, "file":1, "city":"Hamburg","country":"Germany1","image":"germany","ip":"34.125.110.243","active":"true","signal":"b"}
+    {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"34.125.110.243","active":"true","signal":"a"}
   ]
 }
