--- a/appdetails.json
+++ b/appdetails.json
@@ -17,6 +17,7 @@
   ],
   "free":[
     {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"34.125.110.243","active":"true","signal":"a"},
-    {"id":1, "file":1, "city":"United State","country":"United State","image":"germany","ip":"35.195.92.253","active":"true","signal":"a"}
+    {"id":1, "file":1, "city":"United State","country":"United State","image":"germany","ip":"35.195.92.253","active":"true","signal":"a"},
+    {"id":2, "file":2, "city":"Seoul","country":"South Korea","image":"germany","ip":"34.64.103.119","active":"true","signal":"a"}
   ]
 }
